# mav_trajectory_generation_ros2

./: CMakeLists.txt  README.md  package.xml
config/: go_to_waypoint.yaml  trajectory_sampler.yaml
include/mav_trajectory_generation_ros2/: common.h  conversions.h  conversions_deprecated.h  eigen_mav_msgs.h  eigen_planning_msgs.h  io.h  polynomial_optimization_linear.h  polynomial_optimization_nonlinear.h  ros_conversions.h  segment.h  test_utils.h  trajectory.h  trajectory_sampling.h  vertex.h
include/mav_trajectory_generation_ros2/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h
launch/: go_to_waypoint.launch.py  trajectory_sampler.launch.py
msg/: PolynomialSegment.msg  PolynomialSegment4D.msg  PolynomialTrajectory.msg  PolynomialTrajectory4D.msg  Waypoint.msg
nodes/: go_to_waypoint_node.cpp  trajectory_sampler_node.cpp
src/: io.cpp  motion_defines.cpp  polynomial.cpp  polynomial_timing_evaluation.cpp  ros_conversions.cpp  segment.cpp  timing.cpp  trajectory.cpp  trajectory_sampling.cpp  vertex.cpp
src/rpoly/: rpoly_ak1.cpp
