<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mav_trajectory_generation_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mohamedashraf123@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

   <!-- You might need to replace or update some of these dependencies based on their availability in ROS 2 -->
  <depend>eigen</depend> <!-- Note: Eigen might be available as a system dependency -->
  <depend>eigen3_cmake_module</depend>
  <!-- <depend>eigen_checks</depend> --> <!-- Check if available for ROS 2 -->
  <depend>glog</depend> <!-- Note: glog might be available as a system dependency -->
  <!-- <depend>nlopt</depend> --> <!-- Check if available for ROS 2 -->

  <depend>yaml_cpp_vendor</depend> <!-- Assuming you have a vendor package for yaml-cpp in ROS 2 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>